add password auth
